Fix table and image spacing

--- a/content/extra/custom.css
+++ b/content/extra/custom.css
@@ -1,3 +1,19 @@
 aside nav ul li {
   text-transform: capitalize !important;
 }
+
+table { 
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.center-img { 
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+article img {
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
